# internal/models/lin_group.go
@@ -2,6 +2,8 @@
 package models
 
 import (
+	"gorm.io/gorm"
+	"lin-cms-gin/pkg/setting"
 	jtime "lin-cms-gin/pkg/time"
 )
 
@@ -60,3 +62,124 @@ func GetLinGroupTotal(maps map[string]interface{}) (count int64){
 	return
 }
 
+func DeleteLinGroup(id int) bool {
+
+	linGroup := GetLinGroupByID(id)
+
+	if linGroup.ID < 1 {
+		return false
+	}
+
+	if linGroup.Level == setting.LinSetting.GroupLevelRoot {
+		return false
+	}else if linGroup.Level == setting.LinSetting.GroupLevelGuest  {
+		return false
+	}
+
+	// 开启事务
+	tx := db.Session(&gorm.Session{SkipDefaultTransaction: true})
+
+	tx.Transaction(func(txs *gorm.DB) error {
+		if err := txs.Delete(&LinGroupPermission{GroupId: id}).Error; err != nil {
+			return err
+		}
+
+		if err := txs.Delete(&LinUserGroup{GroupId: id}).Error; err != nil {
+			return err
+		}
+
+		if err := txs.Delete(&linGroup).Error; err != nil {
+			return err
+		}
+
+		// 返回 nil 提交事务
+		return nil
+	})
+
+	return true
+}
+
+func DispatchPermission(groupID int, permissionID int) (bool, error)  {
+	linGroup := GetLinGroupByID(groupID)
+
+	if linGroup.ID < 1 {
+		return false,nil
+	}
+
+	permission := GetLinPermissionById(permissionID)
+	if permission.ID < 1 {
+		return false,nil
+	}
+
+	isExist := ExistUserPermissionByPermissionId(permissionID,groupID)
+	if isExist {
+		return false,nil
+	}
+
+	AddLinGroupPermission(groupID,permissionID)
+
+	return true,nil
+}
+
+func DispatchPermissions(groupID int, permissionIDS []int) (bool, error)  {
+	linGroup := GetLinGroupByID(groupID)
+
+	if linGroup.ID < 1 {
+		return false,nil
+	}
+	// 开启事务
+	tx := db.Session(&gorm.Session{SkipDefaultTransaction: true})
+
+	tx.Transaction(func(txs *gorm.DB) error {
+		for permissionID, _ := range permissionIDS {
+			permission := GetLinPermissionById(permissionID)
+			if permission.ID < 1 {
+				panic("分配权限不存在")
+			}
+
+			isExist := ExistUserPermissionByPermissionId(permissionID, groupID)
+			if isExist {
+				panic("分配权限不存在")
+			}
+
+			result := db.Create(&LinGroupPermission{
+				GroupId: groupID,
+				PermissionId: permissionID,
+			})
+
+			if result.Error != nil {
+				panic(result.Error)
+			}
+		}
+		return  nil
+	})
+	return true,nil
+}
+
+func RemovePermissions(groupID int, permissionIDS []int) bool  {
+	linGroup := GetLinGroupByID(groupID)
+
+	if linGroup.ID < 1 {
+		return false
+	}
+	// 开启事务
+	tx := db.Session(&gorm.Session{SkipDefaultTransaction: true})
+
+	tx.Transaction(func(txs *gorm.DB) error {
+		for permissionID, _ := range permissionIDS {
+			permission := GetLinPermissionById(permissionID)
+			if permission.ID < 1 {
+				panic("分配权限不存在")
+			}
+
+			isExist := ExistUserPermissionByPermissionId(permissionID, groupID)
+			if isExist {
+				panic("分配权限不存在")
+			}
+
+			txs.Where("group_id = ? AND permission_id = ?",groupID,permissionID).Delete(&LinGroupPermission{})
+		}
+		return  nil
+	})
+	return true
+}
